<resources>
    <string name="app_name">Consumer App</string>
    <string name="search_hint_username">Username</string>
    <string name="dummy_username">Big Boss</string>
    <string name="dummy_type">User</string>
    <string name="dummy_name">Ramadan Wibi Surya Aji</string>

    <string name="search">Search</string>
    <string name="tab_follower">Follower</string>
    <string name="tab_following">Following</string>
    <string name="change_language">Change Language</string>
    <string name="favorite">Favorite</string>
    <string name="no_data_now">There is no data at the moment</string>
    <string name="save_to_favorite">saved to favorites</string>
    <string name="delete_form_favorite">removed from favorites</string>
    <string name="button_favorite">Button Favorite</string>

    <string name="three_info">%1$s . %2$s . %3$s</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="info_daily_reminder_set">Let app remind your to find friends on Github everyday.</string>
    <string name="info_daily_reminder_notification">Hi, let\'s find your friends on Github today.</string>
    <string name="reminder">Reminder</string>
    <string name="test_notify">Testing notification</string>
    <string name="switch_reminder_on">Reminder is on</string>
    <string name="switch_reminder_off">Reminder is off</string>
</resources>
